@@ -4,11 +4,19 @@ Copyright 2006 Scott Horowitz <stonecrest@gmail.com>
 Thanks to Andrew Conkling, et al, for all their hard work on Pygmy!
 Sonata is a fork of the Pygmy project.
 
-For information on MPD, please see http://musicpd.org.  Their wiki is
-also a great resource: http://mpd.wikicities.com
+REQUIREMENTS:
+	(Required) PyGTK 2.6.0 or newer
+	(Required) GTK 2.6.0 or newer
+	(Required) MPD
+	(Optional) Gnome-python-extras for the system tray icon
 
-Installation:
-In the sonata directory, run 'python setup.py install --prefix=/path'
-(where 'path' is '/usr' or '/usr/share', usually).  If you're able
-and willing to create various distribution packages/build scripts,
-please let me know so I can put them on the website.
+INSTALLATION:
+	Just run 'python setup.py install' as root.
+
+FEATURES:
+	+ Expanded and collapsed views
+	+ Automatic album art retrieval (with alternatives)
+	+ Playlist and Library tabs
+	+ System tray icon with tooltip
+	+ Keyboard friendly
+	+ Repeat, shuffle, volume control, etc.
